--- a/03-using-ESM/bitly/public/style.css
+++ b/03-using-ESM/bitly/public/style.css
@@ -30,3 +30,22 @@ button {
     border: none;
     cursor: pointer;
 }
+
+div.flex-container {
+    padding: 1.5em;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    line-height: 1.0;
+    border: 1px solid #333;
+}
+
+h1,
+h3,
+p,
+a {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #333;
+    padding: 0.25em 0;
+    text-align: center;
+}
