--- a/03-using-ESM/bitly/public/style.css
+++ b/03-using-ESM/bitly/public/style.css
@@ -50,3 +50,19 @@ a {
     padding: 0.25em 0;
     text-align: center;
 }
+
+table {
+    border: 1px solid #333;
+    margin: 0 auto;
+}
+
+th,
+td {
+    border: 1px solid #333;
+    padding: 0.15em;
+}
+
+td.long-url {
+    text-align: left;
+    padding: 0.15em 0.5em;
+}
